[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ci-cd-generator-ai-mcp"
version = "1.0.0"
description = "MEOK AI Labs — ci-cd-generator-ai-mcp — Generate CI/CD pipeline configs."
authors = [{name="MEOK AI Labs", email="nicholas@meok.ai"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "mcp-server", "model-context-protocol", "claude", "ai-tools", "meok-ai-labs", "ci-cd", "continuous-integration", "deployment-pipeline", "github-actions", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/ci-cd-generator-ai-mcp"
Documentation = "https://meok.ai/docs/ci-cd-generator-ai-mcp"
"Bug Tracker" = "https://github.com/CSOAI-ORG/ci-cd-generator-ai-mcp/issues"
