[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "ci-cd-generator-ai-mcp"
version = "1.0.0"
description = "MCP server for ci cd generator ai. Features generate github actions, generate gitlab ci, generate jenkinsfile. From MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
dependencies = ["mcp>=1.0.0"]
keywords = ["mcp", "ai", "meok", "generator"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/ci-cd-generator-ai-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
ci_cd_generator_ai_mcp = "server:main"
